--- a/views/add-product.html
+++ b/views/add-product.html
@@ -7,89 +7,14 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Add Product</title>
-    <style>
-      body {
-        padding: 0;
-        margin: 0;
-        font-family: sans-serif;
-      }
-
-      main {
-        padding: 1rem;
-      }
-
-      .main-header {
-        width: 100%;
-        height: 3.5rem;
-        background-color: #dbc441;
-        padding: 0 1.5rem;
-      }
-
-      .main-header__nav {
-        height: 100%;
-        display: flex;
-        align-items: center;
-      }
-
-      .main-header__item-list {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-      }
-
-      .main-header__item {
-        padding: 0;
-        margin: 0 1rem;
-      }
-
-      .main-header__item a {
-        text-decoration: none;
-        color: white;
-      }
-
-      .main-header__item a:hover,
-      .main-header__item a:active,
-      .main-header__item a.active {
-        color: #6200ff;
-      }
-
-      .product-form {
-        width: 20rem;
-        max-width: 90%;
-        margin: auto;
-      }
-
-      .form-control {
-        margin: 1rem 0;
-      }
-
-      .form-control label,
-      .form-control input {
-        display: block;
-      }
-
-      .form-control input {
-        border: 1px solid #dbc441;
-        font: inherit;
-        border-radius: 2px;
-      }
-
-      button {
-        font: inherit;
-        border: 1px solid #6200ff;
-        color: #6200ff;
-        background: white;
-        border-radius: 3px;
-        cursor: pointer;
-      }
-
-      button:hover,
-      button:active {
-        background-color: #6200ff;
-        color: white;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="/css/main.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/css/product.css"
+    />
   </head>
   <body>
     <header class="main-header">
@@ -112,7 +37,7 @@
     <main>
       <form
         class="product-form"
-        action="/add-product"
+        action="/admin/add-product"
         method="POST"
       >
         <div class="form-control">
