--- a/views/shop.html
+++ b/views/shop.html
@@ -7,53 +7,10 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Add Product</title>
-    <style>
-      body {
-        padding: 0;
-        margin: 0;
-        font-family: sans-serif;
-      }
-
-      main {
-        padding: 1rem;
-      }
-
-      .main-header {
-        width: 100%;
-        height: 3.5rem;
-        background-color: #dbc441;
-        padding: 0 1.5rem;
-      }
-
-      .main-header__nav {
-        height: 100%;
-        display: flex;
-        align-items: center;
-      }
-
-      .main-header__item-list {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-      }
-
-      .main-header__item {
-        padding: 0;
-        margin: 0 1rem;
-      }
-
-      .main-header__item a {
-        text-decoration: none;
-        color: white;
-      }
-
-      .main-header__item a:hover,
-      .main-header__item a:active,
-      .main-header__item a.active {
-        color: #6200ff;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="/css/main.css"
+    />
   </head>
   <body>
     <header class="main-header">
@@ -67,7 +24,7 @@
             >
           </li>
           <li class="main-header__item">
-            <a href="/add-product">Add Product</a>
+            <a href="/admin/add-product">Add Product</a>
           </li>
         </ul>
       </nav>
